tests/error/pid_mod_err.d

pid$target:a.out::entry
{

}

pid$target:at::entry
{

}